# sso-uc

./: README.md  pyproject.toml
sso_uc/: main.py
sso_uc_helper/: __init__.py  main.py
uc_sso/: __init__.py  main.py  parsers.py
uc_sso_helper/: main.py  parsers.py
