[tool.poetry]
name = "sso-uc"
version = "0.1.0"
description = ""
authors = ["Agustín Covarrubias <agucova@uc.cl>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
html-table-parser-python3 = "^0.2.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
