[tool.poetry]
name = "uc-sso"
version = "1.0.3"
description = "A helper for interacting locally with services that are protected by UC Chile's SSO."
authors = ["Agustín Covarrubias <agucova@uc.cl>"]
license = " AGPL-3.0-or-late"
readme = "README.md"
homepage = "https://github.com/agucova/sso-uc"
repository = "https://github.com/agucova/sso-uc/"
keywords = ["uc-chile", "uc", "sso"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
html-table-parser-python3 = "^0.2.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
